--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.6",
+        "bootstrap-icons": "^1.13.1",
         "datatables.net": "^2.3.1",
         "datatables.net-bs5": "^2.3.1",
         "datatables.net-responsive-bs5": "^3.0.4",
