--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,7 +18,7 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            # custom_authenticator: App\Security\LoginFormAuthenticator
+            custom_authenticator: App\Security\LoginFormAuthenticator
 
             logout:
                 path: app_logout
@@ -29,13 +29,12 @@ security:
                 lifetime: 604800 # 1 week
                 path: /
                 always_remember_me: true
-                #always_remember_me: true
-            custom_authenticator: App\Security\LoginFormAuthenticator
 
     # Access rules
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/chat, roles: ROLE_USER }
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/register, roles: PUBLIC_ACCESS }
         - { path: ^/reset-password, roles: PUBLIC_ACCESS }
